# Igus_ROS2

./: .gitignore  README.md  setup_rebel_lan.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/irc_ros_bringup/share/irc_ros_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/irc_ros_controllers/include/irc_ros_controllers/: dashboard_controller.hpp  dashboard_semantic_component_interface.hpp  dio_controller.hpp  schmalz_ecbpmi_controller.hpp
install/irc_ros_controllers/share/irc_ros_controllers/: dashboard_controller.xml  dio_controller.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  (+4 more)
irc_ros_bringup/launch/: rebel.launch.py
irc_ros_description/urdf/: igus_rebel_6dof.urdf.xacro
irc_ros_hardware/: package.xml
irc_ros_hardware/src/: irc_ros_cri.cpp
irc_ros_hardware/src/CRI/: cri_socket.cpp
irc_ros_moveit_config/config/: moveit_controllers.yaml  ros2_controllers.yaml
log/: latest_build  latest_list
src/irc_ros_bringup/config/: controller_igus_rebel_6dof.yaml
src/irc_ros_bringup/launch/: rebel.launch.py
src/irc_ros_moveit_config/config/: controllers.yaml  igus_rebel_6dof.srdf.xacro  kinematics.yaml  moveit_controllers.yaml  moveit_py.yaml  ros2_controllers.yaml
src/irc_ros_moveit_config/launch/: rebel.launch.py
src/testtube_sorting/: package.xml  pick_and_place.py  position_recorder.py  robot_jogger.py  robot_positions.json  setup.cfg  setup.py
(+519 files in other folders)
